less/app.less
/*!
 * flibbble styles
 *
 * 2012 by Maximilian Hoffmann & Stefan Schwartze
 */

/* Variables
   ========================================================================== */


/* Styles
   ========================================================================== */

* {
	box-sizing: border-box;
}

::-webkit-input-placeholder {
   color: hsl(220, 13%, 38%);
}

body {
	margin: 0;
	padding: 0;
	color: hsl(220, 13%, 38%);
	background: hsl(220, 15%, 86%);
	font: bold 16px/24px "Helvetica Neue", Helvetica, sans-serif;
	-webkit-user-select: none;
}

a {
	color: hsl(220, 10%, 50%);
	text-decoration: none;
	-webkit-tap-highlight-color: transparent;
}

a:hover,
a:active {
	color: hsl(220, 20%, 77%);
	text-shadow: 0 1px 0 white;
}

.screen {
	position: absolute;
	top: 0;
	left: 0;
	width: 320px;
	height: 460px;
  overflow: hidden;
}

#flipper {
  background: -webkit-radial-gradient(center, hsl(220, 15%, 98%), hsl(220, 15%, 86%));
  box-shadow: -3px 0 10px hsl(220, 15%, 13%);
  z-index: 2;
	-webkit-perspective: 800px;
  -webkit-transition: -webkit-transform .3s ease;
}

#flipper.right {
  -webkit-transform: translateX(240px);
}

.drag {
	position: absolute;
	width: 100%;
	text-align: center;
	color: hsl(220, 20%, 77%);
	text-shadow: 0 1px 0 white;

	&.down {
		top: 9px;
	}
	&.up {
		bottom: 9px;
	}
}

.arrow {
	display: inline-block;
	font-size: 1.8em;
	vertical-align: bottom;
	-webkit-transition: -webkit-transform .3s ease;
}

.load {
	-webkit-transform: translateY(-160px);
	-webkit-transition: -webkit-transform .8s ease;
}

.down .load {
	-webkit-transform: translateY(160px);
}

/* Pages
   ========================================================================== */

.page {

	position: absolute;
	top: 50%;
	width: 100%;
	height: 50%;
  -webkit-transform-style: preserve-3d;
  -webkit-transform-origin-y: top;
	-webkit-transition: -webkit-transform .5s ease-out, visibility .4s ease-out; // fixes flicker on flip down
  visibility: hidden;

	&.visible {
		visibility: visible;
  	-webkit-transition: -webkit-transform .5s ease-out;
	}

	&.up {
		-webkit-transform: rotateX(180deg) translateZ(0);
	}

	&:last-child {
  	box-shadow: 0 5px 10px hsl(220, 15%, 70%);
	}

}

.drag + .page {
  box-shadow: 0 5px 10px hsl(220, 15%, 70%);
}

.front,
.back {
	position: absolute;
	top: 0;
	width: 100%;
	height: 100%;
	padding: 20px 30px 20px 50px;
	overflow: hidden;

	font: bold 16px/24px 'Helvetica Neue', Helvetica, sans-serif;
  background: -webkit-radial-gradient(center, hsl(220, 15%, 98%), hsl(220, 15%, 86%));
  -webkit-backface-visibility: hidden;
  -webkit-transform-style: preserve-3d;
}

.back {
	-webkit-transform: rotateX(-180deg);
}

.text {
	font-size: 2em;
	padding-top: 99px;
	padding-left: 30px;
	text-align: center;
	text-shadow: 0 1px 0 white;
}

.shot {
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
	z-index: 2;
	overflow: hidden;
  background: -webkit-radial-gradient(center, hsl(220, 15%, 98%), hsl(220, 15%, 86%));
  box-shadow: 2px 0 10px hsl(220, 15%, 70%);
	-webkit-transition: -webkit-transform .3s ease;

	&.left {
		-webkit-transform: translateX(-300px);
	}

	& img {
		position: absolute;
		top: -5px;
		left: 0;
		width: 100%;
		-webkit-transition: opacity .6s ease;
		//-webkit-animation: debug 1s infinite alternate;
	}

}

.visible + .visible .back img {
	-webkit-transition: none; // nasty flicker fix
}

// @-webkit-keyframes debug {
// 	0% {
// 		opacity: .5;
// 	}
// 	100% {
// 		opacity: 1;
// 	}
// }

.preview {
	width: 100%;
	padding: 28% 20px 0 20px;
	color: hsl(220, 10%, 50%);
	text-shadow: 0 1px 0 white;
}

.preview-title,
.preview-author {
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	text-align: center;
}

.preview-author {
	font-size: .9em;
	font-style: italic;
	color: hsl(220, 15%, 84%);
}

.hide {
	opacity: 0;
}

/* Details
   ========================================================================== */

.details {
	color: hsl(220, 10%, 50%);
	text-shadow: 0 1px 0 white;
}

.title {
	width: 240px;
	margin: 24px 0 0 0;
	font: bold 21px/1.5em 'HelveticaNeue-CondensedBold', 'Helvetica Neue', Helvetica, sans-serif;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.author {
	margin-top: 17px;
	padding-left: 1px;

	&:after {
		content: "";
		display: table;
		clear: both;
	}
}

.author-image {
	float: left;
	margin-right: 14px;
	width: 58px;
	height: 58px;
	border: 4px solid white;
	border-radius: 8px;
	box-shadow: 0 1px 2px hsl(220, 20%, 75%);

	&:hover,
	&:active {
		border-color: hsl(220, 20%, 77%);
		box-shadow:
			0 1px 2px hsl(220, 20%, 75%),
			0 0 3px 1px hsl(220, 20%, 77%) inset;
	}

	& img {
		z-index: 1;
		border-radius: 5px;
		-webkit-transition: opacity 1s ease;
	}

}

.author-name {
	float: left;
	width: 167px;
	margin-top: 5px;
	margin-bottom: 2px;
	display: block;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.author-links,
.author-links a {
	color: hsl(220, 20%, 77%);
}

.author-links a:hover,
.author-links a:active {
	color: hsl(220, 20%, 60%);
}

.title {
	margin-top: 24px 0 0 0;
}

.meta {
	margin-top: 6px;
	padding-left: 1px;
}

/* Menu
   ========================================================================== */

#menu {
	z-index: 1;
	padding-right: 80px;
  background: -webkit-radial-gradient(center, hsl(220, 15%, 27%), hsl(220, 15%, 20%));
  // Baseline Grid
  // background: -webkit-linear-gradient(top, transparent 23px, black 25px);
  // background-size: 24px 24px;
}

.active {
	color: white;
	text-shadow: 0 1px 0 black;
}

.user {
	margin-top: 15px;
	-webkit-transition: opacity .5s ease;

	&:after {
		content: "";
		display: table;
		clear: both;
	}

	input {
		margin-top: 19px;
		background: hsla(0, 0%, 0%, .15);
		border: 1px solid hsl(220, 15%, 25%);
		padding: 5px;
		border-radius: 6px;
		color: white;
		width: 130px;
		border-top: 1px solid hsl(220, 15%, 16%);
		border-bottom: 1px solid hsl(220, 15%, 28%);
		-webkit-appearance: caret;
		-webkit-transition: opacity .3s linear;
	}
}

.user-name {
  float: left;
  width: 130px;
  margin-top: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
	color: hsl(220, 10%, 95%);
	text-shadow: 0 1px 0 black;
}

.user-image {
  float: left;
  margin: 0 14px 0 16px;
  width: 60px;
  height: 61px;
  border: 5px solid hsl(220, 80%, 55%);
  border-radius: 8px;
  box-shadow: 0 1px 2px rgba(22, 24, 29, 0.5);

	img {
		position: absolute;
		top: 0;
		left: 0;
		border-radius: 5px;
	}

	div {
		position: relative;
		width: 50px;
		height: 50px;
		padding-top: 8px;
		text-align: center;
		font-size: 14px;
		font-weight: normal;
		line-height: 1.2em;
		color: hsl(220, 20%, 10%);
		text-shadow: 0 1px 0 hsl(220,15%,30%);
		border-radius: 5px;
		box-shadow:
			0 1px 0 0 hsl(220, 80%, 45%),
			0 1px 0 1px hsl(220, 90%, 67%),
			0 -1px 0 hsl(220, 80%, 35%);
	}
}

.user-links {
	text-shadow: 0 1px 0 hsl(220, 20%, 5%);
	-webkit-transition: opacity .3s ease;

	&.hide {
		display: none;
	}
}

.user-links .active {
	color: hsl(218, 13%, 38%);
	border-bottom: 2px solid hsl(220, 13%, 38%);
	box-shadow: 0 1px 0 hsl(220, 10%, 15%);
}

#navigation {
	margin: 20px 0 0 0;
	padding: 12px 0;
	list-style: none;
	border-top: 1px solid hsla(220, 20%, 10%,.3);
	border-bottom: 1px solid hsla(220, 15%, 35%,.5);
	background: rgba(0,0,0,.15);

	& li {
		position: relative;
		margin: 0;
		padding: 0 0 4px 20px;
		font-size: 24px;
		line-height: 44px;
		text-shadow: 0 1px 0 hsl(220, 20%, 5%);
	}

}

#history-label {
	margin: 10px 0 0 20px;
	color: hsl(220, 20%, 10%);
	text-shadow: 0 1px 0 hsl(220,15%,30%);
	font-variant: small-caps;
	line-height: 1.8em;
}

#history {
	margin: 2px 0 0 0;
	padding: 0;
	list-style: none;
}

#history li {
	width: 220px;
	padding-left: 20px;
	line-height: 2em;
	-webkit-transition: opacity .8s ease, margin .4s ease;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
	text-shadow: 0 1px 0 hsl(220, 20%, 5%);

  &:hover,
  &:active {
		color: white;
		text-shadow: 0 1px 0 black;
  }

	&:first-child {
		opacity: 0;
		margin-top: -2em;
	}

	&:nth-child(6) {
		opacity: 0;
		-webkit-transition: opacity .3s linear;
	}
}

/* Notifications
   ========================================================================== */

#notifications {
	position: absolute;
	top: -40px;
	width: 320px;
	z-index: 3;
	text-align: center;
  pointer-events: none;

  &.hide {
  	opacity: 1;
  	-webkit-animation: hide ease .5s forwards;
  }

	&.show {
		-webkit-animation:  show ease 1s forwards;
	}

}

#notification {
	display: inline-block;
	padding: 4px 8px;
	max-width: 280px;
	color: white;
	background: rgba(0, 0, 0, .7);
	font-size: .9em;
	border-radius: 4px;
  pointer-events: none;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, .4);
  box-shadow: 0 1px 2px rgba(0,0,0,.5);
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

@-webkit-keyframes show {

	40% {
		-webkit-transform: translateY(58px);
	}

	100% {
		-webkit-transform: translateY(55px);
	}

}

@-webkit-keyframes hide {

	0% {
		-webkit-transform: translateY(55px);
	}

	70% {
		-webkit-transform: translateY(80px);
	}

	100% {
		-webkit-transform: translateY(0);
	}

}

/* Sprites
   ========================================================================== */

.likes,
.views,
.open,
.comments {
  display: inline-block;
  margin: 0 5px 0 10px;
  background: url('../images/stripes-color.png') no-repeat;
  background-size: 29px 25px;
}

.likes {
  margin-left: 0;
  width: 13px;
  height: 12px;
}

.views {
  width: 15px;
  height: 12px;
  background-position: -14px 0;
}

.open {
  width: 16px;
  height: 12px;
  background-position: 0 -13px;
}

.comments {
  width: 14px;
  height: 12px;
  background-position: -16px -13px;
}


/* Landscape
   ========================================================================== */

@media only screen and (orientation: landscape) {

	.screen {
		height: 300px;
		width: 480px;
	}

	.drag {
		display: none;
	}

	.page {
		top: 300px;
		height: 100%;
		width: 100%;
	}

	#notifications {
		width: 480px;
	}

	#notification {
		max-width: 400px;
	}

	.landscape.right {

		.page {
			top: 0;
		}

		.text {
			top: 0;
			padding: 27% 0 0 0;
			text-align: center;
		}

	}

	.front,
	.back {
		padding: 55px 0 0 150px;
	}

	.title {
		width: 270px;
	}

	.author-name {
		width: 197px;
	}

	.shot {
		background: none;
		box-shadow: none;
	}

	.shot img {
		top: 10px;
		left: 63px;
		width: 360px;
		height: 280px;
		border: 3px solid white;
  	box-shadow: 0 0 10px hsl(220, 15%, 70%);
	}

	.preview {
		display: none
	}

}

